configurable remove from source

--- a/src/main/webapp/VAADIN/themes/mytheme/styles.css
+++ b/src/main/webapp/VAADIN/themes/mytheme/styles.css
@@ -13000,4 +13000,5 @@ div.v-layout.v-horizontal.v-widget {
 
 .mytheme .component-columns .v-splitpanel-horizontal .v-margin-left {
 	padding-left: 10px;
+	padding-right: 1px;
 }
