--- a/src/main/webapp/VAADIN/themes/mytheme/styles.css
+++ b/src/main/webapp/VAADIN/themes/mytheme/styles.css
@@ -12990,11 +12990,11 @@ div.v-layout.v-horizontal.v-widget {
 	border: 1px dashed gray;
 }
 
-.mytheme .component .actions-container .action {
+.mytheme .component .action {
 	padding: 0;
 }
 
-.mytheme .component .actions-container .action .v-icon {
+.mytheme .component .action .v-icon {
 	vertical-align: inherit;
 }
 
@@ -13007,15 +13007,14 @@ div.v-layout.v-horizontal.v-widget {
 	border: 1px dashed #cccccc;
 }
 
-.mytheme .component-columns .v-splitpanel-horizontal .v-margin-right {
-	padding-right: 5px;
+.mytheme .component-dynamic .container .v-slot-big {
+	width: 67% !important;
 }
 
-.mytheme .component-columns .v-splitpanel-horizontal .v-margin-left {
-	padding-left: 5px;
-	padding-right: 1px;
+.mytheme .component-dynamic .container .v-slot-small {
+	width: 33% !important;
 }
 
-.mytheme .component-columns .size .v-radiobutton {
+.mytheme .component-columns .size .v-radiobutton, .mytheme .component-dynamic .size .v-radiobutton {
 	display: inline;
 }
