--- a/src/main/webapp/VAADIN/themes/mytheme/styles.css
+++ b/src/main/webapp/VAADIN/themes/mytheme/styles.css
@@ -1557,6 +1557,41 @@ div.v-layout.v-horizontal.v-widget {
 	vertical-align: top;
 }
 
+.mytheme {
+	@keyframes fadein {
+		from {
+		opacity: 0;
+	}
+		to {
+		opacity: 1;
+	}
+	}
+	@-moz-keyframes fadein {
+		from {
+		opacity: 0;
+	}
+		to {
+		opacity: 1;
+	}
+	}
+	@-webkit-keyframes fadein {
+		from {
+		opacity: 0;
+	}
+		to {
+		opacity: 1;
+	}
+	}
+	@-o-keyframes fadein {
+		from {
+		opacity: 0;
+	}
+		to {
+		opacity: 1;
+	}
+	}
+}
+
 .mytheme.v-app, .mytheme.v-app-loading {
 	font: 300 16px/1.55 "Open Sans", sans-serif;
 	color: #464646;
@@ -12983,6 +13018,133 @@ div.v-layout.v-horizontal.v-widget {
 	display: inline-block;
 	width: 19px;
 	overflow: hidden;
+}
+
+.mytheme .v-caption-story-editor {
+	margin-top: 10px;
+	text-align: center;
+}
+
+.mytheme .story-editor .v-has-caption .v-caption .v-captiontext {
+	color: #000000;
+}
+
+.mytheme .story-editor {
+	-webkit-box-shadow: 0 2px 10px rgba(0, 0, 0, 0.3);
+	box-shadow: 0 2px 10px rgba(0, 0, 0, 0.3);
+	padding: 1.5em;
+	margin-top: 5px;
+}
+
+.mytheme .v-verticallayout-story-editor-component-layout {
+	border: 1px dashed #cccccc;
+	border-radius: 5px;
+	-moz-border-radius: 5px;
+	-webkit-border-radius: 5px;
+	padding: 5px;
+}
+
+.mytheme .story-editor .editor-component-actions-wrapper .left-actions-wrapper {
+	float: left;
+}
+
+.mytheme .story-editor .editor-component-actions-wrapper .right-actions-wrapper {
+	float: right;
+}
+
+.mytheme .story-editor .v-caption-contentTypeLabel .v-captiontext {
+	text-transform: none;
+}
+
+.mytheme .story-editor .story-editor-component .v-caption-contentTypeLabel {
+	top: initial;
+	bottom: 1em;
+}
+
+.mytheme .story-editor .story-editor-component .thumbnail {
+	max-width: 100%;
+}
+
+.mytheme .story-editor .story-editor-component .fieldVideoStatus {
+	float: none;
+}
+
+.mytheme .story-editor .story-editor-component .fieldVideoStatus .v-progressbar-indicator {
+	width: 97% !important;
+}
+
+.mytheme .story-editor .story-editor-component .boi-richtextarea-textarea iframe {
+	height: 50vh !important;
+	max-height: none !important;
+}
+
+.mytheme .story-editor .story-spacer {
+	border: 2px dashed #cccccc;
+	padding: 10px;
+}
+
+.mytheme .story-editor .story-spacer .v-label {
+	text-align: center;
+}
+
+.mytheme .story-editor .v-ddwrapper-over-top.v-ddwrapper-over-top {
+	border-top: 2px solid #4e787c;
+}
+
+.mytheme .story-editor .v-ddwrapper-over-middle.v-ddwrapper-over-middle {
+	border-bottom: 2px solid #4e787c;
+}
+
+.mytheme .story-editor .v-ddwrapper-over-bottom.v-ddwrapper-over-bottom {
+	border-bottom: 2px solid #4e787c;
+}
+
+.mytheme .story-editor .story-spacer.v-ddwrapper-over-top.v-ddwrapper-over-top {
+	border-top: 2px dashed #4e787c;
+}
+
+.mytheme .story-editor .story-spacer.v-ddwrapper-over-middle.v-ddwrapper-over-middle {
+	border-bottom: 2px dashed #4e787c;
+}
+
+.mytheme .story-editor .story-spacer.v-ddwrapper-over-bottom.v-ddwrapper-over-bottom {
+	border-bottom: 2px dashed #4e787c;
+}
+
+.mytheme .story-editor .v-ddwrapper {
+	animation: fadein 2s;
+	-moz-animation: fadein 2s;
+	-webkit-animation: fadein 2s;
+	-o-animation: fadein 2s;
+}
+
+.mytheme .story-editor .story-editor-component .video-left-panel {
+	animation: fadein 2s;
+	-moz-animation: fadein 2s;
+	-webkit-animation: fadein 2s;
+	-o-animation: fadein 2s;
+}
+
+.mytheme .v-horizontallayout-story-item-palette {
+	opacity: 0;
+}
+
+.mytheme .v-slot-story-item-palette {
+	height: 7px;
+	margin: 5px 0 5px 0;
+}
+
+.mytheme .v-slot-story-item-palette:hover .v-horizontallayout-story-item-palette {
+	animation: fadein 300ms;
+	-moz-animation: fadein 300ms;
+	-webkit-animation: fadein 300ms;
+	-o-animation: fadein 300ms;
+	opacity: 1;
+}
+
+.mytheme .v-slot-story-item-palette:hover {
+	height: auto;
+	margin: 5px 0 5px 0;
 }
 
 .mytheme .component {
