--- a/src/main/webapp/VAADIN/themes/mytheme/styles.scss
+++ b/src/main/webapp/VAADIN/themes/mytheme/styles.scss
@@ -8,6 +8,8 @@
   @include addons;
   @include mytheme;
 
+  @import "story-editor.scss";
+
   .component {
     padding: 10px;
     border: 1px dashed gray;
@@ -42,4 +44,5 @@
       display: inline;
     }
   }
+
 }
